# openitems

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/openitems/: __main__.py  cli.py  config.py  paths.py
src/openitems/db/: engine.py  models.py  schema.py
src/openitems/domain/: audit.py  buckets.py  checklists.py  constants.py  dates.py  engagements.py  notes.py  policies.py  policy_export.py  policy_import.py  policy_notes.py  search.py  tag_palette.py  tasks.py  text.py  triage.py
src/openitems/examples/: policies-import-template.csv
src/openitems/export/: digest.py  theme.py  workbook.py
src/openitems/tui/: app.py  app.tcss  palette.py
src/openitems/tui/screens/: activity_log.py  all_items.py  all_policies.py  engagement_picker.py  engagement_switcher.py  export_wizard.py  help.py  import_policies.py  jot.py  main.py  new_policy.py  new_task.py  note_viewer.py  policies.py  policy_detail.py  quick_note.py  renew_policy.py  task_detail.py
src/openitems/tui/widgets/: bucket_pane.py  detail_pane.py  filter_bar.py  items_pane.py  status_bar.py  tag_suggester.py  task_format.py  titlebar.py
tests/: conftest.py  test_dates.py  test_db_migrations.py  test_domain_notes.py  test_domain_policies.py  test_domain_policy_export.py  test_domain_policy_import.py  test_domain_tasks.py  test_domain_triage.py  test_export_digest.py  test_export_workbook.py  test_paths.py  test_search.py  test_status_bar.py  test_tag_suggester.py  test_text_helpers.py  test_tui_all_items.py  test_tui_smoke.py
