[project]
name = "openitems"
version = "0.1.0"
description = "Keyboard-driven open-items tracker with a Planner-style .xlsx exporter."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Grant Greeson" }]
dependencies = [
    "textual>=0.86",
    "sqlalchemy>=2.0",
    "openpyxl>=3.1",
    "typer>=0.12",
    "platformdirs>=4.2",
    "dateparser>=1.2",
    "humanize>=4.10",
    "rapidfuzz>=3.9",
    "babel>=2.16",
    "rich>=13.7",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "textual-dev>=1.6",
]

[project.scripts]
openitems = "openitems.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openitems"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
# N806: Pascal-cased local "SessionLocal" matches SQLAlchemy convention.
# RUF012: TUI cheatsheet/keymap class attrs are immutable in practice.
ignore = ["E501", "N806", "RUF012", "RUF002", "RUF003"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
